--- a/Dash/src/main/webapp/WEB-INF/web.xml
+++ b/Dash/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,6 @@
         <role-name>Manager</role-name>
     </security-role>
     <security-role>
-        <role-name>User</role-name>
+        <role-name>DAO.User</role-name>
     </security-role>
 </web-app>
