--- a/Dash/pom.xml
+++ b/Dash/pom.xml
@@ -111,6 +111,12 @@
             <artifactId>gson</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>Projekt</groupId>
+            <artifactId>MainImpl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
