--- a/MainApi/pom.xml
+++ b/MainApi/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0.1-b5</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
